--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@electron-forge/maker-squirrel": "^7.1.0",
     "@electron-forge/maker-zip": "^7.1.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.1.0",
-    "electron": "^27.1.2"
+    "@eslint/js": "^8.56.0",
+    "electron": "^27.1.2",
+    "eslint": "^8.56.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
