feat: Add auto launch on start up option
This commit adds a new feature to allow user to configure the app to be launched on startup automatically

This enhances the app's usability

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.56.0"
   },
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "electron-squirrel-startup": "^1.0.0"
   }
 }
