--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/svijaykoushik/chrono-chime-desktop.git"
+  },
   "author": {
     "email": "svijaykoushik@hotmail.com",
     "name": "Vijaykoushik, S.",
@@ -28,6 +32,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.6",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "update-electron-app": "^3.0.0"
   }
 }
