--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ jobs:
 
   publish_on_linux:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4       
     - uses: actions/setup-node@master
@@ -22,6 +24,8 @@ jobs:
 
   publish_on_mac:
     runs-on: macos-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@master
@@ -36,6 +40,8 @@ jobs:
 
   publish_on_win:
     runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4       
     - uses: actions/setup-node@master
