--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.6",
+    "electron-log": "^5.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "update-electron-app": "^3.0.0"
   }
