--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "publish": "electron-forge publish",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,13 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.1.0",
     "@electron-forge/publisher-github": "^7.2.0",
     "@eslint/js": "^8.56.0",
+    "@wdio/cli": "^8.32.3",
+    "@wdio/local-runner": "^8.32.3",
+    "@wdio/mocha-framework": "^8.32.3",
+    "@wdio/spec-reporter": "^8.32.2",
     "electron": "^27.1.2",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "wdio-electron-service": "^6.3.2"
   },
   "dependencies": {
     "auto-launch": "^5.0.6",
